Revise data availability section in paper_complete.tex
Updated data availability section with new repository link and removed old references.

--- a/paper_complete.tex
+++ b/paper_complete.tex
@@ -1079,12 +1079,13 @@ def v_cbt(r, v_bar, R, Vmax):
         v0(r, R, Vmax)**2)
 \end{verbatim}
 
-Full code available at: \url{https://github.com/DavidRDudas/CBT}
+\section{DATA AVAILABILITY}
+\label{sec:data}
 
-All fitting and simulation code is publicly available for independent verification.
+The code and datasets generated for this study are available in the Zenodo repository, 
+\url{https://doi.org/10.5281/zenodo.18261965}. 
 
-\section{Data Availability}
-
-SPARC data from \citet{Lelli2016}: \url{http://astroweb.cwru.edu/SPARC/}
+The SPARC data used in this work was originally published by Lelli et al. (2016) 
+and is available at \url{http://astroweb.cwru.edu/SPARC/}.
 
 \end{document}
